# AdventOfHaskell2017

./: .gitignore  AdventOfHaskell2017.cabal
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Parser.hs  Utilities.hs
test/: Day01Test.hs  Day02Test.hs  Day03Test.hs  Day04Test.hs  ParserTest.hs  Test.hs  UtilitiesTest.hs
