cabal-version:       >=1.10
name:                AdventOfHaskell2017
version:             0.1.0.0
build-type:          Simple
license:             BSD3
author:              Justin Kasteleijn
maintainer:          justin.kasteleijn@gmail.com
synopsis:            Advent of Code 2017
category:            Advent of Code

-- Source directories
library
  hs-source-dirs:      src
  exposed-modules:     Parser, Day01, Utilities, Day02, Day03
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

-- Executable (optional)
executable advent2017
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base, AdventOfHaskell2017
  default-language:    Haskell2010

-- Test suite
test-suite advent2017-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >=4.7 && <5, HUnit, AdventOfHaskell2017
  default-language:    Haskell2010
